# snake

./: CMakeLists.txt
src/: main.c
